# investing-diagnosis

./: .gitignore  .pre-commit-config.yaml  pcconfig.py  pyproject.toml
investing_diagnosis/: investing_diagnosis.py
scripts/: git-hooks.sh
