[tool.poetry]
name = "investing-diagnosis"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]
readme = "README.md"
packages = [{include = "investing_diagnosis"}]

[tool.poetry.dependencies]
python = "^3.10"
pynecone = "^0.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
